--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inimore</title>
+	<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png"/>
 </head>
 <body>
 	<script src="main.ts"></script>
